<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginTop="100dp"
        android:text="@string/name_enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/surname_enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText" />

    <TextView
        android:id="@+id/birthDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/birth_date_enter"
        app:layout_constraintBaseline_toBaselineOf="@id/birthDateEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameText" />

    <TextView
        android:id="@+id/sexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/sex_enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthDateEntry" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="end"
        app:constraint_referenced_ids="nameText, surnameText, birthDateText, sexText" />


    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/enter_text_height"
        android:layout_margin="@dimen/default_margin"
        android:autofillHints=""
        android:hint="@string/hintName"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@id/nameText"
        app:layout_constraintStart_toEndOf="@id/barrier" />

    <EditText
        android:id="@+id/surnameEdit"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/enter_text_height"
        android:layout_margin="@dimen/default_margin"
        android:autofillHints=""
        android:hint="@string/hint_surname"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@id/surnameText"
        app:layout_constraintStart_toEndOf="@id/barrier" />

    <Button
        android:id="@+id/birthDateEntry"
        style="@style/Widget.Material3.MaterialTimePicker.Button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/enter_text_height"
        android:layout_margin="@dimen/default_margin"
        android:padding="10dp"
        android:text="@string/defaultBirthDate"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/surnameEdit" />

    <RadioGroup
        android:id="@+id/sexRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginStart="28dp"
        android:layout_marginTop="224dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintTop_toBottomOf="@id/birthDateEntry">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:checked="false"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>