<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    tools:context=".fragments.QuestionFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/oracle"
        app:layout_constraintBottom_toTopOf="@+id/questionRecommendation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/askButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/ask"
        app:layout_constraintBottom_toTopOf="@+id/toMenuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/toMenuButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/enter_text_height"
        android:layout_margin="@dimen/default_margin"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/answer_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/askButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editQuestion"
        android:layout_width="@dimen/question_entry_width"
        android:layout_height="@dimen/enter_question_height"
        android:layout_margin="@dimen/default_margin"
        android:autofillHints=""
        android:hint="@string/enter_question"
        android:lines="3"
        app:layout_constraintBottom_toTopOf="@+id/answerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionRecommendation" />

    <TextView
        android:id="@+id/questionRecommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_recommendation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>